@@ -195,7 +195,7 @@
                             <configurationDirectory>config</configurationDirectory>
                             <endorsedDir>plugins</endorsedDir>
                             <preAssembleDirectory>src/main/distfiles</preAssembleDirectory>
-                            <extraJvmArguments>-Dconfig.file=@BASEDIR@/config/application.conf</extraJvmArguments>
+                            <extraJvmArguments>-Dconfig.file=@BASEDIR@/config/application.conf -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</extraJvmArguments>
                         </configuration>
                     </plugin>
 
@@ -218,7 +218,7 @@
                                     <name>norsknettarkiv/${initializer.image.name}</name>
                                     <alias>db-initializer</alias>
                                     <build>
-                                        <from>java:8</from>
+                                        <from>${docker.java.image}</from>
                                         <maintainer>National Library of Norway</maintainer>
                                         <tags>
                                             <tag>${docker.tag}</tag>
@@ -228,11 +228,11 @@
                                         </ports>
                                         <cmd>
                                             <exec>
-                                                <arg>/${initializer.image.name}/bin/${initializer.image.name}</arg>
+                                                <arg>/veidemann/bin/${initializer.image.name}</arg>
                                             </exec>
                                         </cmd>
                                         <assembly>
-                                            <targetDir>/${initializer.image.name}</targetDir>
+                                            <targetDir>/veidemann</targetDir>
 
                                             <inline>
                                                 <includeBaseDirectory>true</includeBaseDirectory>
